--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,28 +1,16 @@
 {
 	"version": "0.1.0",
-	"command": "${workspaceRoot}/node_modules/.bin/webpack",
+	"command": "npm",
 	"isShellCommand": true,
 	"args": [
-		"--display-modules",
-		"--progress"
+		"run"
 	],
-	"echoCommand": true,
 	"tasks": [
 		{
-			"args": [
-				"-d" 
-			],
-			"suppressTaskName": true,
-			"taskName": "webpack dev",
-			"isBuildCommand": true
-		},
-		{
-			"args": [
-				"-p"
-			],
-			"suppressTaskName": true,
-			"taskName": "webpack dist",
-			"isBuildCommand": false
+			"taskName": "server",
+			"isBuildCommand": false,
+			"isWatching": true,
+			"showOutput": "silent"
 		}
 	]
 }
