--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "url": "https://github.com/Myslik/workshop-typescript.git"
   },
   "license": "MIT",
+  "scripts": {
+    "server": "node_modules/.bin/webpack-dev-server --hot"
+  },
   "devDependencies": {
     "source-map-loader": "^0.1.6",
     "ts-loader": "^1.3.3",
