--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,20 +1,14 @@
 {
     "version": "0.2.0",
-    "configurations": [
-        {
+    "configurations": [{
             "name": "Launch Chrome against localhost",
             "type": "chrome",
             "request": "launch",
             "url": "http://localhost:8080",
+            "userDataDir": "${workspaceRoot}/.vscode/chrome",
             "webRoot": "${workspaceRoot}",
-            "preLaunchTask": "server"
-        },
-        {
-            "name": "Attach to Chrome",
-            "type": "chrome",
-            "request": "attach",
-            "port": 9222,
-            "webRoot": "${workspaceRoot}"
+            "internalConsoleOptions": "openOnFirstSessionStart",
+            "preLaunchTask": "development"
         }
     ]
 }
