--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,15 +2,41 @@
 	"version": "0.1.0",
 	"command": "npm",
 	"isShellCommand": true,
+	"echoCommand": false,
+	"suppressTaskName": true,
+	"showOutput": "always",
 	"args": [
 		"run"
 	],
-	"tasks": [
-		{
-			"taskName": "server",
-			"isBuildCommand": false,
-			"isWatching": true,
-			"showOutput": "silent"
-		}
-	]
+	"tasks": [{
+		"args": [
+			"server",
+			"--silent"
+		],
+		"problemMatcher": [{
+				"owner": "custom",
+				"pattern": [],
+				"watching": {
+					"activeOnStart": true,
+					"beginsPattern": "webpack: bundle is now INVALID",
+					"endsPattern": "webpack: bundle is now VALID"
+				}
+			},
+			{
+				"owner": "typescript",
+				"fileLocation": ["relative", "${cwd}"],
+				"pattern": {
+					"regexp": "^([^\\s].*)\\((\\d+|\\d+,\\d+|\\d+,\\d+,\\d+,\\d+)\\):\\s+(error|warning|info)\\s+(TS\\d+)\\s*:\\s*(.*)$",
+					"file": 1,
+					"location": 2,
+					"severity": 3,
+					"code": 4,
+					"message": 5
+				}
+			}
+		],
+		"taskName": "development",
+		"isBuildCommand": false,
+		"isWatching": true
+	}]
 }
